...
                Align(
                  alignment: Alignment.topCenter,
                  child: SvgPicture.asset(AppVectors.logo),
                ),
                const Spacer(),
                const Text(
                  'Escolha o tema',
                  style: TextStyle(
                    fontWeight: FontWeight.bold,
                    color: AppColors.white,
                    fontSize: 28,
                  ),
                ),
...
                ),
                const SizedBox(height: 50),
                BasicAppButton(
                  onPressed: () {
                    Navigator.pushNamed(context, AppRoutes.signupOrSignin);
                  },
                  title: "Continuar",
                ),
              ],
            ),
          ),
        ],
      ),
...
